--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -23,6 +23,8 @@ sites:
     url: http://202.1.196.72:8080/sahara/opac/search/reset.do?SAMLResponse=&clientAlias=&time=&digest=&corporationAlias=mche
   - name: Saruna
     url: https://saruna.mnu.edu.mv
+  - name: Marathon
+    url: https://marathon.mnu.edu.mv
   # - name: Moodle (24t2)
   #   url: https://moodle24t2.mnu.edu.mv
   # - name: Moodle (24t1)
